<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".paseos.CrearPaseo">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_upet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/crearPaseoDate"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="25dp"
        android:clickable="true"
        android:onClick="seleccionarFecha"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:hint="@string/ce_walk_date"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/crearPaseoHora"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="time"
        android:focusable="false"
        android:hint="@string/ce_walk_hbeg"
        android:clickable="true"
        android:onClick="seleccionarHora"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/crearPaseoDate"
        app:layout_constraintStart_toStartOf="@+id/crearPaseoDate"
        app:layout_constraintTop_toBottomOf="@+id/crearPaseoDate" />

    <EditText
        android:id="@+id/crearPaseoHoraFin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="time"
        android:focusable="false"
        android:hint="@string/ce_walk_hend"
        android:clickable="true"
        android:onClick="seleccionarHora"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/crearPaseoHora"
        app:layout_constraintStart_toStartOf="@+id/crearPaseoHora"
        app:layout_constraintTop_toBottomOf="@+id/crearPaseoHora" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crearPaseoTarifa">

        <Button
            android:id="@+id/scp_button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="toDefinirRuta"
            android:text="@string/ce_walk_genrute" />

        <Button
            android:id="@+id/scp_button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/general_cancel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crearPaseoTarifa">

        <Button
            android:id="@+id/scp_button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/general_create"
            android:onClick="createWalk"/>
    </LinearLayout>

    <EditText
        android:id="@+id/crearPaseoCapacidad"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ce_walk_maxcap"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/crearPaseoHoraFin"
        app:layout_constraintStart_toStartOf="@+id/crearPaseoHoraFin"
        app:layout_constraintTop_toBottomOf="@+id/crearPaseoHoraFin" />

    <EditText
        android:id="@+id/crearPaseoTarifa"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ce_walk_price"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/crearPaseoCapacidad"
        app:layout_constraintStart_toStartOf="@+id/crearPaseoCapacidad"
        app:layout_constraintTop_toBottomOf="@+id/crearPaseoCapacidad" />


</androidx.constraintlayout.widget.ConstraintLayout>