<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beigePet"
    tools:context=".RegistroExt">

    <TextView
        android:id="@+id/tit_ingresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display"
        android:text="@string/titulo_inf"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registro_celular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inf_boton_registro"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/roundedcornersbutton"
        android:text="@string/registro"
        android:fontFamily="@font/playfair_display_black"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/textviewinf2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/inf_boton_atras"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/roundedcornersbutton"
        android:text="@string/atras"
        android:fontFamily="@font/playfair_display_black"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewinf2" />

    <TextView
        android:id="@+id/textviewinf1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registro_celular"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/playfair_display_black"
        android:hint="@string/celular_registro"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/registro_dir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registro_ciudad"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/playfair_display_black"
        android:ems="10"
        android:hint="@string/ciudad_registro"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registro_barrio"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/playfair_display_black"
        android:ems="10"
        android:hint="@string/barrio_registro"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewinf1" />

    <EditText
        android:id="@+id/registro_dir"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/playfair_display_black"
        android:ems="10"
        android:hint="@string/direccion_registro"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/registro_ciudad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textviewinf2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewinf1" />

</androidx.constraintlayout.widget.ConstraintLayout>